# util_eigen_geometry

./: .travis.yml  CMakeLists.txt  CODEOWNERS  README.md  package.xml
include/util_eigen_geometry/: util_eigen_geometry.hpp  util_eigen_quadratic_matrices.hpp
include/util_eigen_geometry/internal/: util_eigen_geometry_impl.hpp
src/: util_eigen_geometry.cpp
test/: test_util_eigen_geometry.cpp  test_util_eigen_quadratic_matrices.cpp
