<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>util_eigen_geometry</name>
  <version>1.0.0</version>
  <description>Utils for geometry using Eigen</description>

  <license>BSD</license>
  <maintainer email="lingguang.wang@kit.edu">Lingguang Wang</maintainer>
  <author email="maximilian.naumann@kit.edu">Maximilian Naumann</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>

  <depend>eigen</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>